--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>studySpring</module>
         <module>studyJVM</module>
         <module>studySpringBoot</module>
+        <module>studyBeanValidation</module>
     </modules>
 
     <!--顶层项目指定打包方式-->
